Setup for finding field groups

--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -82,11 +82,7 @@ To group model inventory fields, first create a model group:
 
 2. Under Models, select **Model Inventory Fields**.
 
-3. Click **{{< fa plus >}} Add Group** and enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}** for the group.
-
-4. Click **Create Group** to add the new group.
-
-5. Assign the desired fields to the group.[^5]
+{{< include /guide/model-inventory/_add-field-groups.qmd >}}
 
 ## Delete inventory fields
 
@@ -115,5 +111,4 @@ To group model inventory fields, first create a model group:
 
 [^4]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^5]: [Add or edit inventory fields](#add-edit)
 
