--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -15,6 +15,7 @@ Manage the fields that appear on findings logged on your models. Choose from an 
 :::
 
 ## Add or edit finding fields
+<span id="add-edit"></span>
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -86,6 +87,55 @@ User
 - Select list pre-populated with users from your {{< fa book-open >}} User Directory.^[[Manage users](/guide/configuration/manage-users.qmd)]
 - Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
+## Search and filter existing findings fields
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Fields**.
+
+3. Narrow down existing findings fields available to your findings by searching or filtering for results:
+
+::: {.column-margin}
+
+::: {.callout title="Note that searching and filtering of fields stack."}
+For example, if you first search by keyword for `Regression` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
+:::
+
+:::
+
+::: {.panel-tabset}
+
+#### Search fields
+
+a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within a findings field.
+
+b. Select whether to search in the **Title** or **Description**.
+
+c. Click **Search** to narrow down your results by your entered keywords.
+
+
+#### Filter fields
+
+a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
+
+    - **[types]{.smallcaps}** — What type of field it is.[^2]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^3]
+
+b. Click **Apply Filters** to narrow down your results by your configured criteria.
+
+:::
+
+## Add finding groups
+<span id="field-groups">
+
+To group finding fields, first create a finding group:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Fields**.
+
+{{< include /guide/model-inventory/_add-field-groups.qmd >}}
+
 ## Delete finding fields
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
@@ -106,3 +156,7 @@ User
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^2]: [Finding field types](#field-types)
+
+[^3]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
