--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -73,10 +73,10 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 
 :::
 
-## Add model groups
+## Add inventory field groups
 <span id="field-groups">
 
-To group model inventory fields, first create a model group:
+To group model inventory fields, first create an inventory field group:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
