--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -125,10 +125,10 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 
 :::
 
-## Add finding groups
+## Add finding field groups
 <span id="field-groups">
 
-To group finding fields, first create a finding group:
+To group finding fields, first create a finding field group:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
