Set up for Customize finding overview page

--- a/site/guide/model-validation/working-with-model-findings.qmd
+++ b/site/guide/model-validation/working-with-model-findings.qmd
@@ -6,11 +6,12 @@ listing:
     type: grid
     max-description-length: 250
     sort: false
-    grid-columns: 2
+    grid-columns: 3
     fields: [title, description]
     contents:
       - view-filter-model-findings.qmd
       - add-manage-model-findings.qmd
+      - customize-finding-overview-page.qmd
 aliases:
   - work-with-model-findings.html
   - /guide/work-with-model-findings.html
