--- a/site/guide/model-validation/customize-finding-overview-page.qmd
+++ b/site/guide/model-validation/customize-finding-overview-page.qmd
@@ -3,10 +3,10 @@ title: "Customize finding overview page"
 date: last-modified
 ---
 
-Configure what and how model inventory fields appear when you pull up a model's details in the inventory. 
+Configure what and how finding fields appear when you pull up findings logged on models.
 
 :::{.callout title="Changes are automatically saved to your account and do not affect other users."}
-Customizations will apply to all models in your inventory.
+Customizations will apply to all findings in your inventory.
 
 :::
 
@@ -16,42 +16,38 @@ Customizations will apply to all models in your inventory.
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
+- [x] There are findings logged on models.[^2]
 
 :::
 
 ## Show or hide fields
 
-::: {.callout title="Only custom inventory fields can be shown or hidden."}
-Default fields will always appear on your model overview pages and are represented by by faded cells. Their positions cannot be adjusted.
+::: {.callout title="Only custom finding fields can be shown or hidden."}
+Default fields will always appear on your finding overview pages and are represented by by faded cells. Their positions cannot be adjusted.
 :::
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
+1. Open a finding logged on any model.[^3]
 
-2. Select a model or find your model by applying a filter or searching for it.[^2]
+2. Click on **{{< fa table-cells-large >}} Customize Layout**.
 
-3. Click on **{{< fa table-cells-large >}} Customize Layout**.
+3. On the Customize Section Layout modal that appears, configure the finding fields[^4] that appear:
 
-4. On the Customize Section Layout modal that appears, configure the model inventory fields[^3] that appear: 
-
-   - Toggle optional model inventory fields or field groups on or off to show or hide them from view.
-   - Click and hold a field or field group to drag-and-drop to rearrange the order of fields and field groups. Fields and field groups can be moved from the Side Column to the Main Column and vice versa.[^4]
+   - Toggle optional finding fields or field groups on or off to show or hide them from view.
+   - Click and hold a field or field group to drag-and-drop to rearrange the order of fields and field groups. Fields and field groups can be moved from the Side Column to the Main Column and vice versa.[^5]
 
    To narrow down your list of fields, search via the **{{< fa filter >}} Filter** bar.
 
-5. Click **Save Layout** to apply your changes to all model overview pages.
-
-## What's next
-
-- [Edit model inventory fields](edit-model-inventory-fields.qmd)
-- [Manage model inventory fields](manage-model-inventory-fields.qmd)
+4. Click **Save Layout** to apply your changes to all model overview pages.
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
 
-[^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^2]: [Add and manage model findings](add-manage-model-findings.qmd)
 
-[^3]: [Manage model inventory fields](manage-model-inventory-fields.qmd#inventory-field-types)
+[^3]: [View and filter model findings](view-filter-model-findings.qmd)
 
-[^4]: `Attachments` or `Long Text` type fields can only be placed in the Main Column.
+[^4]: [Manage model finding fields](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)
+
+[^5]: `Attachments` or `Long Text` type fields can only be placed in the Main Column.
