docs: Manage platform notifications MVP (#860)
* New access section

* Fixing broken links

* Fixing broken links pt2

* Massaging footer

* Moving access images

* Setup for Manage platform notifications

* Outline for Manage platform notifications

* WIP View platform notifications

* WIP

* WIP...

* Save point

* Placeholders

* Edit for MVP

* Tweak

* Org invite filter

* Edits

* Hiding accept invites for now

--- a/site/guide/access/register-with-validmind.qmd
+++ b/site/guide/access/register-with-validmind.qmd
@@ -2,6 +2,8 @@
 # USING THE VARIABLE IN THE TITLE MESSES UP THE BREADCRUMB
 title: "Register with ValidMind"
 date: last-modified
+aliases: 
+  - /guide/configuration/register-with-validmind.html
 ---
 
 Register with our cloud-hosted {{< var validmind.platform >}}, so you can begin working with model documentation or configure {{< var vm.product >}} for your organization.
@@ -100,9 +102,9 @@ b. `validmind.com`
 
 ## What's next
 
-- [Managing your organization](managing-your-organization.qmd)
-- [Managing users](managing-users.qmd)
-- [Personalize {{< var vm.product >}}](personalize-validmind.qmd)
+- [Managing your organization](/guide/configuration/managing-your-organization.qmd)
+- [Managing users](/guide/configuration/managing-users.qmd)
+- [Personalize {{< var vm.product >}}](/guide/configuration/personalize-validmind.qmd)
 
 
 <!-- FOOTNOTES -->
@@ -122,8 +124,8 @@ b. `validmind.com`
 
 [^5]: [User invitations](/guide/configuration/manage-users.qmd#user-invitations)
 
-[^6]: [Manage roles](manage-roles.qmd)
+[^6]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
-[^7]: [Customize your dashboard](customize-your-dashboard.qmd)
+[^7]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)
 
 [^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
