--- a/site/guide/access/log-in-to-validmind.qmd
+++ b/site/guide/access/log-in-to-validmind.qmd
@@ -10,10 +10,11 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-      - configure-aws-privatelink.qmd
-      - configure-google-private-service-connect.qmd
+      - ../configuration/configure-aws-privatelink.qmd
+      - ../configuration/configure-google-private-service-connect.qmd
 aliases:
   - log-into-validmind.html
+  - /guide/configuration/log-in-to-validmind.html
 ---
 
 Log in to our cloud-hosted {{< var validmind.platform >}} to work with your model documentation, prepare validation reports, or to configure {{< var vm.product >}} for your organization.
@@ -62,8 +63,8 @@ To configure and log in through a private link for your company VPC using a supp
 
 ## What's next
 
-- [Managing your organization](managing-your-organization.qmd)
-- [Managing users](managing-users.qmd)
-- [Personalize {{< var vm.product >}}](personalize-validmind.qmd)
+- [Managing your organization](/guide/configuration/managing-your-organization.qmd)
+- [Managing users](/guide/configuration/managing-users.qmd)
+- [Personalize {{< var vm.product >}}](/guide/configuration/personalize-validmind.qmd)
 
 
