--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -10,7 +10,7 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-    - configuration/accessing-validmind.qmd
+    - access/accessing-validmind.qmd
   - id: guides-configuration
     type: grid
     max-description-length: 250
@@ -26,6 +26,7 @@ listing:
     fields: [title, description]
     contents:
     - configuration/personalize-validmind.qmd
+    - configuration/manage-platform-notifications.qmd
   - id: guides-model-workflows
     type: grid
     max-description-length: 250
@@ -133,12 +134,14 @@ Our guides offer step-by-step instructions for frequent tasks you perform within
 
 :::
 
-## Configuration
+## Access
 
 Before you begin, let's make sure you're able to access {{< var vm.product >}}:
 
 :::{#guides-login}
 :::
+
+## Configuration
 
 Onboard your organization, teams or business units, and users onto the {{< var validmind.platform >}}:
 
