--- a/site/guide/access/accessing-validmind.qmd
+++ b/site/guide/access/accessing-validmind.qmd
@@ -12,8 +12,18 @@ listing:
     contents:
     - register-with-validmind.qmd
     - log-in-to-validmind.qmd
-aliases: 
+aliases:
   - /guide/configuration/accessing-validmind.html
 ---
 
 To use {{< var vm.product >}} to track your models and oversee your model management process, you'll need to first sign up and then log in to the {{< var vm.platform >}}.
+
+:::{#guides-access}
+:::
+
+<br>
+
+## What's next
+
+- [Managing your organization](/guide/configuration/managing-your-organization.qmd)
+- [Managing users](/guide/configuration/managing-users.qmd)
