--- a/site/guide/configuration/managing-users.qmd
+++ b/site/guide/configuration/managing-users.qmd
@@ -62,7 +62,7 @@ validator
 customer admin 
 : The Customer Admin role has extensive control over the entire {{< var vm.platform >}}. This role can manage users, groups, and permissions at a broader level.
 
-## What's next
+## Managing users
 
 :::{#whats-next-listing}
 :::
