--- a/site/guide/model-inventory/managing-model-inventory.qmd
+++ b/site/guide/model-inventory/managing-model-inventory.qmd
@@ -17,3 +17,10 @@ Once you're familiar with the inventory, dive into more advanced features like m
 
 :::{#model-inventory-management}
 :::
+
+<br>
+
+## What's next
+
+- [Working with the model inventory](working-with-model-inventory.qmd)
+- [View model activity](view-model-activity.qmd)
