--- a/site/guide/templates/working-with-document-templates.qmd
+++ b/site/guide/templates/working-with-document-templates.qmd
@@ -22,3 +22,10 @@ aliases:
 
 :::{#document-templates}
 :::
+
+<br>
+
+## What's next
+
+- [Working with model documents](working-with-model-documents.qmd)
+- [Manage text block library](manage-text-block-library.qmd)
