--- a/site/guide/templates/working-with-model-documents.qmd
+++ b/site/guide/templates/working-with-model-documents.qmd
@@ -17,3 +17,10 @@ Set up document types, categories of model-related content, for use on models ac
 
 :::{#model-documents}
 :::
+
+<br>
+
+## What's next
+
+- [Working with document templates](working-with-document-templates.qmd)
+- [Manage text block library](manage-text-block-library.qmd)
