--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -93,7 +93,7 @@ Areas typically covered in the questionnaire:
 
 Work with your model risk management team to create a template that accurately reflects your organization's attestation requirements.
 
-## What's next
+## Manage attestations
 
 ::: {#attestation-listing}
 :::
