--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -100,7 +100,7 @@ This section describes how to work with model documentation in the {{< var valid
 [Include any common issues or errors that may arise during the task and how to resolve them.]
 --->
 
-## Working with model documentation
+## Manage model documentation
 
 Draft, edit, and refine your model documentation, complete with supporting test results:
 
