--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -46,7 +46,7 @@ For example, if you first search by keyword for `ValidMind` without clearing tha
 
 :::
 
-## Working with the model inventory
+## {{< var vm.product >}} model inventory
 
 :::{#model-inventory}
 :::
