--- a/site/guide/model-validation/managing-model-validation.qmd
+++ b/site/guide/model-validation/managing-model-validation.qmd
@@ -18,3 +18,10 @@ Enable your organization to use the {{< var validmind.platform >}} for validatio
 
 :::{#validation}
 :::
+
+<br>
+
+## What's next
+
+- [Working with model findings](working-with-model-findings.qmd)
+- [Preparing validation reports](preparing-validation-reports.qmd)
