--- a/site/guide/model-validation/working-with-model-findings.qmd
+++ b/site/guide/model-validation/working-with-model-findings.qmd
@@ -59,7 +59,7 @@ residual analysis
 
 
 
-## Get started
+## Manage model findings
 
 :::{#model-findings}
 :::
@@ -67,7 +67,3 @@ residual analysis
 ## What's next
 
 - [Preparing validation reports](preparing-validation-reports.qmd)
-- [Working with analytics](/guide/reporting/working-with-analytics.qmd)
-- [Export documentation](/guide/reporting/export-documentation.qmd)
-- [View model activity](/guide/model-inventory/view-model-activity.qmd)
-
