--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -15,7 +15,7 @@ listing:
 
 {{< include /guide/model-workflows/_set-up-model-workflows.qmd >}}
 
-## Set up workflows
+## Workflow setup
 
 :::{#model-workflows}
 :::
