--- a/site/guide/monitoring/ongoing-monitoring.qmd
+++ b/site/guide/monitoring/ongoing-monitoring.qmd
@@ -131,7 +131,7 @@ Key test areas to pay attention to:
 To try out monitoring, check out the code sample for ongoing monitoring of models.[^3]
 :::
 
-## What's next
+## Manage ongoing monitoring
 
 :::{#ongoing-monitoring-listing}
 :::
