--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -97,7 +97,7 @@ Use the {{< var validmind.platform >}} to prepare detailed validation reports in
    Compliance assessments and linking evidence and findings are both saved automatically after selection.
    :::
 
-## What's next
+## Prepare validation reports
 
 Complete your validation report by reviewing submitted model documentation and assessing compliance:
 
@@ -108,6 +108,10 @@ Collaborate with other stakeholders and submit your work for approval:
 
 :::{#complete-reports}
 :::
+
+## What's next
+
+- [Working with model findings](working-with-model-findings.qmd)
 
 
 <!-- FOOTNOTES -->
