--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -121,7 +121,7 @@ Rearrange report widgets on your custom analytics pages:[^5]
     To resize a widget, hover over the bottom-right corner of a widget until the **{{< fa hand>}}** appears, then adjust the dimensions to your liking. 
 
 
-## What's next
+## Manage analytics
 
 :::{#reports}
 :::
