--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -70,22 +70,26 @@ Use the {{< var validmind.platform >}} to prepare detailed validation reports in
 
 ::::
 
-## Get started
+## Validation Report Overview
+
+The **Validation Report Overview** shows a section-by-section outline of your model's validation report, as well as summary of overall compliance.[^5]
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^5]
+2. Select a model or find your model by applying a filter or searching for it.[^6]
 
-3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.[^6]
+3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.[^7]
 
-    Jump to any section of the validation report by expanding the table of contents on the left and selecting the relevant section you would like to view.
+### Add or edit validation reports
 
-4. Add **Risk Assessment Notes**, as well as assess compliance[^7] for each section of your validation report:
+1. From the **Validation Report Overview**, jump to any section of the validation report by clicking on the heading you would like to view.
+
+2. Add **Risk Assessment Notes**, as well as assess compliance for each section of your validation report:
 
     - Validation guidelines are displayed under the header of each section of your report to help ensure that you are compliant with your organization's requirements.[^8]
     - Whenever you make a change, a log of the action is recorded under **{{< fa wifi >}} Model Activity**.[^9]
 
-5. For any **Risk Assessment Notes**, save your edits to retain your changes:
+3. For any **Risk Assessment Notes**, save your edits to retain your changes:
 
    - Clicking on the {{< fa clock-rotate-left >}} icon in the editor toolbar.
    - Select **Save current revision** and enter a name.
@@ -124,11 +128,11 @@ Collaborate with other stakeholders and submit your work for approval:
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
 
-[^6]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^7]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
+[^7]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
 [^8]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
 
