Final tweaks before posting for review

--- a/site/reference/admin-api.qmd
+++ b/site/reference/admin-api.qmd
@@ -22,11 +22,14 @@ bread-crumbs: false
     nav-hover-text-color="#de257e"
     nav-accent-color="#de257e" 
     nav-accent-text-color="#de257e"
-    show-method-in-nav-bar="colored-block"
+    show-method-in-nav-bar="as-plain-text"
+    show-components="false"
     use-path-in-nav-bar="true"
-    allow-authentication="false"
+    allow-authentication="true"
     allow-server-selection="false"
-    allow-try="false"
+    persist-auth="true"
+    allow-try="true"
+    show-curl-before-try="true"
     allow-search="true"
     allow-advanced-search="true"
     fill-request-fields-with-example="true">
