--- a/site/reference/validmind-rest-apis.qmd
+++ b/site/reference/validmind-rest-apis.qmd
@@ -9,7 +9,7 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-      - title: "{{< var vm.product >}} API"
+      - title: "{{< var vm.product >}} Public API"
         description: "Interact with models, templates, groups, business units, and other organizational resources."
         path: vm-api.qmd
       - title: "{{< var vm.product >}} Admin API"
@@ -21,7 +21,7 @@ The {{< var validmind.platform >}} provides RESTful APIs for interacting with or
 
 ::: {.panel-tabset}
 
-## ValidMind API
+## ValidMind Public API
 
 The ValidMind API allows clients to programmatically interact with models, templates, groups, business units, and other organizational resources.
 
