--- a/site/reference/vm-api.qmd
+++ b/site/reference/vm-api.qmd
@@ -5,7 +5,9 @@ bread-crumbs: false
 ---
 
 ::: {.column-screen}
+
 <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
+
 <rapi-doc 
     spec-url="https://api.dev.vm.validmind.ai/vm/api/v1/swagger.json"
     show-header="false"
@@ -22,13 +24,17 @@ bread-crumbs: false
     nav-hover-text-color="#de257e"
     nav-accent-color="#de257e" 
     nav-accent-text-color="#de257e"
-    show-method-in-nav-bar="colored-block"
+    show-method-in-nav-bar="as-plain-text"
+    show-components="false"
     use-path-in-nav-bar="true"
-    allow-authentication="false"
+    allow-authentication="true"
     allow-server-selection="false"
-    allow-try="false"
+    persist-auth="true"
+    allow-try="true"
+    show-curl-before-try="true"
     allow-search="true"
     allow-advanced-search="true"
     fill-request-fields-with-example="true">
 </rapi-doc>
+
 :::
