docs: Grouping model inventory & finding fields (#864)
* Setup for inventory field groups

* Setup for finding field groups

* Editing

* Set up for Customize finding overview page

* Editing

* Edits

* More edits

* Save point

* Save point

* Save point

* Editing

* Proofread

--- a/site/guide/configuration/managing-your-organization.qmd
+++ b/site/guide/configuration/managing-your-organization.qmd
@@ -50,7 +50,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 3. Under **Organization Name**, type in your new name and click **Update** to save your changes.
 
-## What's next
+## Organization setup
 
 :::{#guides-configuration}
 :::
