--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -2,7 +2,7 @@
 title: "Check documentation for compliance"
 date: last-modified
 listing:
-  - id: check-documents-whats-next
+  - id: check-documents
     type: grid
     grid-columns: 2
     max-description-length: 250
@@ -10,7 +10,6 @@ listing:
     fields: [title, description]
     contents: 
     - ../../about/overview-llm-features.qmd
-    - ../../guide/model-documentation/submit-for-approval.qmd
 aliases: 
   - /guide/model-documentation/check-documents-for-compliance.html
 ---
@@ -91,9 +90,9 @@ The system analyzes your documentation, identifies gaps, and generates recommend
 
 Use the feedback provided by the {{< var validmind.checker >}} to review the appropriate sections of your documentation and decide what revisions should be made. Or, if you have run the {{< var vm.checker >}} before and were just checking that all documentation issues have been addressed, submit your model for validation.
 
-## What's next
+## Learn more
 
-::: {#check-documents-whats-next}
+::: {#check-documents}
 :::
 <!-- FOOTNOTES -->
 
