--- a/site/guide/model-inventory/customize-model-overview-page.qmd
+++ b/site/guide/model-inventory/customize-model-overview-page.qmd
@@ -31,19 +31,14 @@ Default fields will always appear on your model overview pages and are represent
 
 3. Click on **{{< fa table-cells-large >}} Customize Layout**.
 
-4. On the Customize Section Layout modal that appears, configure the model inventory fields[^3] that will appear: 
+4. On the Customize Section Layout modal that appears, configure the model inventory fields[^3] that appear: 
 
-   - Toggle optional model inventory fields on or off to show or hide them from view.
-   - Click and hold a field to drag-and-drop to rearrange the order of fields. Fields can be moved from the Side Column to the Main Column and vice versa.[^4]
+   - Toggle optional model inventory fields or field groups on or off to show or hide them from view.
+   - Click and hold a field or field group to drag-and-drop to rearrange the order of fields and field groups. Fields and field groups can be moved from the Side Column to the Main Column and vice versa.[^4]
 
    To narrow down your list of fields, search via the **{{< fa filter >}} Filter** bar.
 
 5. Click **Save Layout** to apply your changes to all model overview pages.
-
-## What's next
-
-- [Edit model inventory fields](edit-model-inventory-fields.qmd)
-- [Manage model inventory fields](manage-model-inventory-fields.qmd)
 
 
 <!-- FOOTNOTES -->
