--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -2,7 +2,7 @@
 title: "Working with the model inventory"
 date: last-modified
 listing:
-  - id: whats-next-listing
+  - id: model-inventory
     type: grid
     max-description-length: 250
     grid-columns: 2
@@ -46,10 +46,15 @@ For example, if you first search by keyword for `ValidMind` without clearing tha
 
 :::
 
+## {{< var vm.product >}} model inventory
+
+:::{#model-inventory}
+:::
+
 ## What's next
 
-:::{#whats-next-listing}
-:::
+- [Managing the model inventory](managing-model-inventory.qmd)
+- [View model activity](view-model-activity.qmd)
 
 
 <!-- FOOTNOTES -->
