--- a/site/guide/model-validation/working-with-model-findings.qmd
+++ b/site/guide/model-validation/working-with-model-findings.qmd
@@ -6,11 +6,12 @@ listing:
     type: grid
     max-description-length: 250
     sort: false
-    grid-columns: 2
+    grid-columns: 3
     fields: [title, description]
     contents:
       - view-filter-model-findings.qmd
       - add-manage-model-findings.qmd
+      - customize-finding-overview-page.qmd
 aliases:
   - work-with-model-findings.html
   - /guide/work-with-model-findings.html
@@ -58,7 +59,7 @@ residual analysis
 
 
 
-## Get started
+## Manage model findings
 
 :::{#model-findings}
 :::
@@ -66,7 +67,3 @@ residual analysis
 ## What's next
 
 - [Preparing validation reports](preparing-validation-reports.qmd)
-- [Working with analytics](/guide/reporting/working-with-analytics.qmd)
-- [Export documentation](/guide/reporting/export-documentation.qmd)
-- [View model activity](/guide/model-inventory/view-model-activity.qmd)
-
