--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -18,6 +18,7 @@ aliases:
 :::
 
 ## Add or edit inventory fields
+<span id="add-edit"></span>
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -72,6 +73,17 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 
 :::
 
+## Add inventory field groups
+<span id="field-groups">
+
+To group model inventory fields, first create an inventory field group:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Models, select **Model Inventory Fields**.
+
+{{< include /guide/model-inventory/_add-field-groups.qmd >}}
+
 ## Delete inventory fields
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
@@ -84,10 +96,6 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 
 5. After you confirm, the field will be removed.
 
-## What's next
-
-- [Working with the model inventory](working-with-model-inventory.qmd)
-
 
 <!-- FOOTNOTES -->
 
@@ -98,3 +106,5 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 [^3]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
 [^4]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+
