Add image to highlight fields

--- a/site/releases/highlights.qmd
+++ b/site/releases/highlights.qmd
@@ -4,7 +4,7 @@ listing:
   id: highlights
   contents:
     - ../releases/**/pr*.qmd
-  fields: [date, title, categories, description]
+  fields: [date, title, categories, description, image]
   sort: "date desc"
   max-description-length: 300
   type: default
