Update listing sort order

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -14,7 +14,9 @@ listing:
   include:
     categories: "*highlight*"
   fields: [date, title]
-  sort: "date desc"
+  sort:
+    - "date desc"
+    - "title asc"
   max-description-length: 300
   type: table
   categories: false
