--- a/site/releases/highlights.qmd
+++ b/site/releases/highlights.qmd
@@ -5,7 +5,9 @@ listing:
   contents:
     - ../releases/**/pr*.qmd
   fields: [date, title, categories, description, image]
-  sort: "date desc"
+  sort:
+    - "date desc"
+    - "title asc"
   max-description-length: 300
   type: default
   categories: false
