Use categories include instead of filter, simplify sorting, CSS tweaks

--- a/site/releases/highlights.qmd
+++ b/site/releases/highlights.qmd
@@ -1,13 +1,14 @@
 ---
 title: "Feature highlights"
 listing:
-  id: highlights
   contents:
-    - ../releases/**/pr*.qmd
+    - ../releases/frontend/**/pr*.qmd
+    - ../releases/documentation/**/pr*.qmd
+    - ../releases/validmind-library/**/pr*.qmd
   fields: [date, title, categories, description, image]
-  sort:
-    - "date desc"
-    - "title asc"
+  include:
+    categories: highlight
+  sort: "date desc"
   max-description-length: 300
   type: default
   categories: false
@@ -17,3 +18,30 @@ listing:
 page-layout: full
 ---
 
+```{=html}
+<style>
+
+// Pagination at the bottom of the page
+.page-item.active .page-link {
+  background-color: #de257e !important;
+  border-color: #de257e !important;
+  color: white !important;
+}
+
+li.page-item.active > a.page-link {
+  background-color: #de257e !important;
+  border-color: #de257e !important;
+  color: white !important;
+}
+
+.page-item.active .page-link:hover {
+  background-color: #f78ab2 !important; /* 50% lighter */
+  border-color: #f78ab2 !important;
+  color: #333 !important; /* contrast text */
+}
+
+.toc-actions {
+  display: none !important;
+}
+</style>
+```
