--- a/site/releases/documentation-releases.qmd
+++ b/site/releases/documentation-releases.qmd
@@ -11,5 +11,34 @@ listing:
   categories: true
   sort-ui: true
   filter-ui: true
+  page-size: 12
 page-layout: full
---- 
+---
+
+```{=html}
+<style>
+
+// Pagination at the bottom of the page
+.page-item.active .page-link {
+  background-color: #de257e !important;
+  border-color: #de257e !important;
+  color: white !important;
+}
+
+li.page-item.active > a.page-link {
+  background-color: #de257e !important;
+  border-color: #de257e !important;
+  color: white !important;
+}
+
+.page-item.active .page-link:hover {
+  background-color: #f78ab2 !important; /* 50% lighter */
+  border-color: #f78ab2 !important;
+  color: #333 !important; /* contrast text */
+}
+
+.toc-actions {
+  display: none !important;
+}
+</style>
+```
