--- a/site/notebooks/code_samples/credit_risk/application_scorecard_with_bias.ipynb
+++ b/site/notebooks/code_samples/credit_risk/application_scorecard_with_bias.ipynb
@@ -1387,7 +1387,7 @@
     "\n",
     "### Work with your model documentation\n",
     "\n",
-    "1. In the ValidMind Platform, click **Documentation** under Documents for the model you registered earlier. ([Need more help?](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html))\n",
+    "1. In the ValidMind Platform, go to the **Documentation** page for the model you registered earlier. ([Need more help?](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html))\n",
     "\n",
     "2. Expand the following sections and take a look around:\n",
     "\n",
