--- a/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
+++ b/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
@@ -1759,7 +1759,7 @@
     "\n",
     "1. From the **Inventory** in the ValidMind Platform, go to the model you connected to earlier.\n",
     "\n",
-    "2. In the left sidebar that appears for your model, click **Validation Report** under Documents.\n",
+    "2. In the left sidebar that appears for your model, click **Validation Report**.\n",
     "\n",
     "Include your logged test results as evidence, create risk assessment notes, add findings, and assess compliance, then submit your report for review when it's ready. **Learn more:** [Preparing validation reports](https://docs.validmind.ai/guide/model-validation/preparing-validation-reports.html)"
    ]
