--- a/site/notebooks/code_samples/ongoing_monitoring/quickstart_customer_churn_ongoing_monitoring.ipynb
+++ b/site/notebooks/code_samples/ongoing_monitoring/quickstart_customer_churn_ongoing_monitoring.ipynb
@@ -468,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To view the results of the model metadata and data quality tests, select **Ongoing Monitoring** under Documents in the left sidebar of the model in the ValidMind Platform and click on the following sections:\n",
+    "To view the results of the model metadata and data quality tests, navigate to **Ongoing Monitoring** in the left sidebar of the model in the ValidMind Platform and click on the following sections:\n",
     "\n",
     "- 1. Model Monitoring Overview > **1.2. Model Details**\n",
     "- 2. Data Quality & Drift Assessment > **2.1. Prediction Data Description**"
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can view these results in the ValidMind Platform in **Ongoing Monitoring** within Documents under the following section:\n",
+    "You can view these results in the ValidMind Platform within **Ongoing Monitoring** under the following section:\n",
     "\n",
     "- 2. Data Quality & Drift Assessment > **2.2. Prediction Data Correlations and Interactions**"
    ]
@@ -744,7 +744,7 @@
     "You can now review all the ongoing monitoring results in the ValidMind Platform.\n",
     "\n",
     "1. From the **Model Inventory** in the ValidMind Platform, go to the model you registered earlier. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/working-with-model-inventory.html))\n",
-    "2. In the left sidebar that appears for your model, click **Ongoing Monitoring** under Documents.\n",
+    "2. Click on the **Ongoing Monitoring** section.\n",
     "\n",
     "What you see is the full draft of your model monitoring documentation in a more easily consumable version. From here, you can make qualitative edits to model monitoring documentation, view guidelines, collaborate with validators, and submit your model monitoring documentation for approval when it's ready.\n",
     "\n",
@@ -807,9 +807,9 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "ValidMind Library",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "validmind"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
