--- a/site/notebooks/quickstart/quickstart_model_documentation.ipynb
+++ b/site/notebooks/quickstart/quickstart_model_documentation.ipynb
@@ -346,7 +346,7 @@
     "\n",
     "2. In the left sidebar, navigate to **Inventory** and select the model you registered for this notebook.\n",
     "\n",
-    "3. Click **Documentation** under Documents for your model and note how the structure of the documentation matches our preview above."
+    "3. Click on the **Documentation** for your model and note how the structure of the documentation matches our preview above."
    ]
   },
   {
