--- a/site/notebooks/quickstart/quickstart_model_validation.ipynb
+++ b/site/notebooks/quickstart/quickstart_model_validation.ipynb
@@ -385,7 +385,7 @@
     "\n",
     "2. In the left sidebar, navigate to **Inventory** and select the model you registered for this notebook.\n",
     "\n",
-    "3. Click **Validation Report** under Documents for your model and note:\n",
+    "3. Click on the **Validation Report** for your model and note:\n",
     "\n",
     "    - [x] The risk assessment compliance summary at the top of the report (screenshot below)\n",
     "    - [x] How the structure of the validation report reflects the previewed template\n",
@@ -1086,7 +1086,7 @@
     "\n",
     "1. From the **Inventory** in the ValidMind Platform, go to the model you registered earlier. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/working-with-model-inventory.html))\n",
     "\n",
-    "2. In the left sidebar that appears for your model, click **Validation Report** under Documents.\n",
+    "2. In the left sidebar that appears for your model, click **Validation Report**.\n",
     "\n",
     "    From here, you can link test results as evidence, add model findings, assess compliance, and submit your validation report for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/model-validation/preparing-validation-reports.html)"
    ]
