--- a/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
+++ b/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
@@ -626,7 +626,7 @@
     "\n",
     "1. From the **Inventory** in the ValidMind Platform, go to the model you connected to earlier.\n",
     "\n",
-    "2. In the left sidebar that appears for your model, click **Validation Report** under Documents.\n",
+    "2. In the left sidebar that appears for your model, click **Validation Report**.\n",
     "\n",
     "3. Locate the Data Preparation section and click on **2.2.2. Model Performance** to expand that section.\n",
     "\n",
