--- a/site/validmind/validmind/tests/prompt_validation/Bias.qmd
+++ b/site/validmind/validmind/tests/prompt_validation/Bias.qmd
@@ -18,7 +18,7 @@ toc-expand: 4
 
 <span class="decorator">@<span class="n">tasks(<span class="s">'text_classification'</span>, <span class="s">'text_summarization'</span>)</span></span> </span>
 
-<span class="kw">def</span><span class="name">Bias</span>(<span class="params"><span class="n">model</span><span class="muted">,</span></span><span class="params"><span class="n">min_threshold</span><span class="o">=</span><span class="kc">7</span></span>):
+<span class="kw">def</span><span class="name">Bias</span>(<span class="params"><span class="n">model</span><span class="muted">,</span></span><span class="params"><span class="n">min_threshold</span><span class="o">=</span><span class="kc">7</span><span class="muted">,</span></span><span class="params"><span class="n">judge_llm</span><span class="o">=</span><span class="kc">None</span></span>):
 
 :::
 
