--- a/site/validmind/validmind/tests/prompt_validation/Robustness.qmd
+++ b/site/validmind/validmind/tests/prompt_validation/Robustness.qmd
@@ -18,7 +18,7 @@ toc-expand: 4
 
 <span class="decorator">@<span class="n">tasks(<span class="s">'text_classification'</span>, <span class="s">'text_summarization'</span>)</span></span> </span>
 
-<span class="kw">def</span><span class="name">Robustness</span>(<span class="params"><span class="n">model</span><span class="muted">,</span></span><span class="params"><span class="n">dataset</span><span class="muted">,</span></span><span class="params"><span class="n">num_tests</span><span class="o">=</span><span class="kc">10</span></span>):
+<span class="kw">def</span><span class="name">Robustness</span>(<span class="params"><span class="n">model</span><span class="muted">,</span></span><span class="params"><span class="n">dataset</span><span class="muted">,</span></span><span class="params"><span class="n">num_tests</span><span class="o">=</span><span class="kc">10</span><span class="muted">,</span></span><span class="params"><span class="n">judge_llm</span><span class="o">=</span><span class="kc">None</span></span>):
 
 :::
 
