PR preview for simple IDP Auth docs / basic ValidMind user role info (#854)
* Add installation branch ref

* Add basic user role info

* Rework ValidMind access section

* Rework basic user role info one more time

* Simplify info for when you have basic user access

* Remove branch ref for PR preview

--- a/site/guide/access/log-in-to-validmind.qmd
+++ b/site/guide/access/log-in-to-validmind.qmd
@@ -54,11 +54,50 @@ Log in to our cloud-hosted {{< var validmind.platform >}} to work with your mode
 
     After successful login, you will be redirected to the main dashboard of the {{< var validmind.platform >}}.
 
+## {{< var vm.product >}} access
+
+When you sign in to {{< var vm.product >}} for the first time, what you can access depends on whether user self-onboarding is enabled for your environment.
+
+### If user self-onboarding is enabled
+
+One of the following two options will apply:
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns .pr5}
+#### Were you invited to an organization?
+
+- Your invitation is accepted automatically. 
+- You are logged in to the organization with the roles defined in the invitation.
+:::
+
+::: {.w-50-ns}
+#### Were you not invited and do not belong to an organization?
+
+- You can create a new organization.
+- You will automatically be assigned the following roles for that organization:
+
+::: {.pl4}
+[{{< fa hand >}} Customer Admin]{.bubble}[{{< fa code >}} Developer]{.bubble}
+:::
+
+:::
+
+::::
+
+### If user self-onboarding is disabled
+
+- You might have only the [{{< fa wrench >}} Basic User]{.bubble} role with very limited access.
+- You will see a message prompting you to contact an administrator. 
+- An administrator must provide you with the necessary access for your role.
+
+Once you have the necessary access, you can work with models and workflows and perform actions such as editing documentation, running tests, or completing validations.
+
 ## {{< var validmind.vpv >}}
 
 To configure and log in through a private link for your company VPC using a supported service:
 
+
 :::{#private-networks}
 :::
-
 
